# lgcns-mlops-template

./: pyproject.toml
